TL表示実装（getHomeTimeline叩くだけ)

--- a/res/layout/startactivity_layout.xml
+++ b/res/layout/startactivity_layout.xml
@@ -23,7 +23,8 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        binding:text="text" />
+        binding:text="text"
+        binding:visibility="textVisibility" />
 
     <Button
         android:id="@+id/button1"
