--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="Black">#000</color>
-    <color name="LightBlue">#00B4FF</color>
+    <color name="LightBlue">#00CFFF</color>
     <color name="White">#FFF</color>
+    <color name="Gray">#202020</color>
+    <color name="LightGreen">#91FF91</color>
+    <color name="LightRed">#FF9191</color>
+    <color name="Red">#FF1E00</color>
+    <color name="BrownYellow">#FFB100</color>
     
 </resources>
