--- a/res/layout/mainactivity_layout.xml
+++ b/res/layout/mainactivity_layout.xml
@@ -2,67 +2,85 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:binding="http://www.gueei.com/android-binding/"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-    <FrameLayout
-        android:id="@+id/frameLayout1"
-        android:layout_width="2dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="@color/LightBlue" >
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout2"
-        android:layout_width="18dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/frameLayout1"
-        android:background="@color/Black"
-        android:foregroundGravity="center_vertical" >
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="6dp"
-            android:src="@drawable/navi_right" />
-    </FrameLayout>
+    android:layout_height="fill_parent" >
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/frameLayout3"
-        android:layout_toRightOf="@+id/frameLayout2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/relativeLayout1"
+        android:fastScrollEnabled="true"
+        android:overScrollMode="always"
+        binding:backgroundColor="listBackground"
+        binding:clickedItem="clickedItem"
         binding:itemSource="listTimeline"
-        binding:itemTemplate="@layout/status_layout" >
+        binding:itemTemplate="@layout/status_layout"
+        binding:onItemClicked="onItemClicked" >
 
     </ListView>
 
-    <FrameLayout
-        android:id="@+id/frameLayout3"
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="22dp"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/frameLayout2"
-        android:background="@color/Black" >
+        binding:backgroundColor="titleBackground" >
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/White"
+            android:textColor="@color/LightBlue"
+            android:textSize="13sp"
             android:textStyle="bold"
+            android:typeface="sans"
             binding:text="title" />
 
-    </FrameLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:alpha="200"
+        binding:backgroundColor="infoBackground" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="40dp"
+            android:adjustViewBounds="false"
+            android:src="@drawable/icon_tweet_w" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_mentions_w" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="40dp"
+            android:src="@drawable/icon_menu_w" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
