UserStream受信仮実装 Close #3

--- a/res/layout/mainactivity_layout.xml
+++ b/res/layout/mainactivity_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/relativeLayout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/relativeLayout1"
@@ -49,37 +49,40 @@
     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:alpha="200"
         binding:backgroundColor="infoBackground" >
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="40dp"
             android:adjustViewBounds="false"
-            android:src="@drawable/icon_tweet_w" />
+            android:src="@drawable/icon_tweet_w" 
+            binding:onClick="tweet"/>
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/icon_mentions_w" />
+            android:src="@drawable/icon_mentions_w"
+            binding:onClick="mentions" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="40dp"
-            android:src="@drawable/icon_menu_w" />
+            android:src="@drawable/icon_menu_w"
+            binding:onClick="menu" />
 
     </RelativeLayout>
 
