--- a/res/layout/mainactivity_layout.xml
+++ b/res/layout/mainactivity_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <ListView
+    <net.miz_hi.warotter.core.BindableListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,14 +13,16 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/relativeLayout1"
         android:fastScrollEnabled="true"
-        android:overScrollMode="always"
+        android:smoothScrollbar="true"
+        android:transcriptMode="disabled"
         binding:backgroundColor="listBackground"
         binding:clickedItem="clickedItem"
+        binding:isScrollTop="isScrollTop"
         binding:itemSource="listTimeline"
         binding:itemTemplate="@layout/status_layout"
         binding:onItemClicked="onItemClicked" >
 
-    </ListView>
+    </net.miz_hi.warotter.core.BindableListView>
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -51,37 +53,36 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:alpha="200"
         binding:backgroundColor="infoBackground" >
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imageView1"
-            android:layout_width="35dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="40dp"
             android:adjustViewBounds="false"
-            android:src="@drawable/icon_tweet_w" 
-            binding:onClick="tweet"/>
+            android:background="@drawable/icon_tweet_w"
+            binding:onClick="tweet" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imageView2"
-            android:layout_width="35dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/icon_mentions_w"
+            android:background="@drawable/icon_mentions_w"
             binding:onClick="mentions" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imageView3"
-            android:layout_width="35dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="40dp"
-            android:src="@drawable/icon_menu_w"
+            android:background="@drawable/icon_menu_w"
             binding:onClick="menu" />
 
     </RelativeLayout>
