--- a/res/layout/status_layout.xml
+++ b/res/layout/status_layout.xml
@@ -21,9 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/imageView1"
-        android:gravity="center_vertical"
-        android:textSize="11sp"
-        android:textStyle="bold"
+        android:textSize="10sp"
         binding:text="screenName"
         binding:textColor="nameColor" />
 
@@ -34,9 +32,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/textView1"
-        android:gravity="center_vertical"
-        android:textSize="11sp"
-        android:textStyle="bold"
+        android:textSize="10sp"
         binding:text="name"
         binding:textColor="nameColor" />
 
@@ -47,8 +43,8 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView2"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp"
         android:textSize="11sp"
         binding:text="text" />
 
@@ -56,7 +52,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@+id/textView4"
         android:layout_below="@+id/textView4"
         android:layout_marginRight="10dp"
         android:textSize="10sp"
@@ -66,11 +62,11 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_marginRight="5dp"
-        android:layout_toLeftOf="@+id/textView5"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textSize="10sp"
-        binding:text="createdAt" />
+        binding:text="retweetedBy" 
+        binding:visibility="isRetweet"/>
 
 </RelativeLayout>
