--- a/res/layout/status_layout.xml
+++ b/res/layout/status_layout.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         binding:source="iconBitmap" />
@@ -21,6 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/imageView1"
+        android:gravity="top"
         android:textSize="10sp"
         binding:text="screenName"
         binding:textColor="nameColor" />
@@ -32,6 +33,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/textView1"
+        android:gravity="top"
         android:textSize="10sp"
         binding:text="name"
         binding:textColor="nameColor" />
