--- a/res/layout/status_layout.xml
+++ b/res/layout/status_layout.xml
@@ -54,7 +54,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignRight="@+id/textView4"
         android:layout_below="@+id/textView4"
         android:layout_marginRight="10dp"
         android:textSize="10sp"
