認証情報のDB化とひかりさまエディション

--- a/res/layout/status_layout.xml
+++ b/res/layout/status_layout.xml
@@ -54,9 +54,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView4"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/textView4"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="3dp"
         android:textSize="10sp"
         binding:text="via" />
 
