--- a/res/layout/mainactivity_layout.xml
+++ b/res/layout/mainactivity_layout.xml
@@ -53,7 +53,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        binding:backgroundColor="titleBackground" >
+        binding:backgroundColor="barBackground" >
 
         <TextView
             android:id="@+id/textView1"
@@ -75,9 +75,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        binding:backgroundColor="infoBackground" >
+        binding:backgroundColor="barBackground" >
 
-        <ImageButton
+        <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -85,26 +85,26 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="40dp"
             android:adjustViewBounds="false"
-            android:background="@drawable/icon_tweet_w"
+            binding:source="postButtonRes"
             binding:onClick="tweet" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/icon_mentions_w"
+            binding:source="timelineButtonRes"
             binding:onClick="mentions" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="40dp"
-            android:background="@drawable/icon_menu_w"
+            binding:source="menuButtonRes"
             binding:onClick="menu" />
 
     </RelativeLayout>
