--- a/res/layout/tweet_layout.xml
+++ b/res/layout/tweet_layout.xml
@@ -30,10 +30,11 @@
         android:ems="10"
         android:gravity="top"
         android:inputType="textMultiLine"
+        android:minHeight="60dp"
         android:textSize="11sp"
+        binding:cursorPos="cursorPos"
         binding:text="text"
-        binding:token="token"
-        binding:cursorPos="cursorPos" />
+        binding:token="token" />
 
     <TableLayout
         android:layout_width="wrap_content"
