android-bindingからの脱出途中。Statusが描画されない

--- a/res/layout/startactivity_layout.xml
+++ b/res/layout/startactivity_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://www.gueei.com/android-binding/"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -15,26 +14,21 @@
         android:src="@drawable/logo_1" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/text_Navigate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        binding:text="text"
-        binding:visibility="textVisibility" />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_Auth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/text_Navigate"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        binding:onClick="authorize"
-        binding:text="buttonAuth" 
-        binding:visibility="buttonAuthVisibility"/>
+        android:layout_marginTop="20dp" />
     
 </RelativeLayout>
