--- a/res/layout/mainactivity_layout.xml
+++ b/res/layout/mainactivity_layout.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://www.gueei.com/android-binding/"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <net.miz_hi.warotter.core.CustomListView
-        android:id="@+id/listView1"
+    <ListView
+        android:id="@+id/listView_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/relativeLayout2"
@@ -15,36 +14,20 @@
         android:fastScrollEnabled="true"
         android:smoothScrollbar="true"
         android:transcriptMode="disabled"
-        binding:backgroundColor="listBackground"
-        binding:clickedItem="clickedItem"
-        binding:isScrollTop="isScrollTop"
-        binding:itemSource="homeTimeline"
-        binding:itemTemplate="@layout/status_layout"
-        binding:onItemClicked="onItemClicked"
-        binding:visibility="isHomeMode" >
-
-    </net.miz_hi.warotter.core.CustomListView>
+        android:background="@color/White"/>
     
-        <net.miz_hi.warotter.core.CustomListView
-        android:id="@+id/listView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/relativeLayout2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/relativeLayout1"
-        android:fastScrollEnabled="true"
-        android:smoothScrollbar="true"
-        android:transcriptMode="disabled"
-        binding:backgroundColor="listBackground"
-        binding:clickedItem="clickedItem"
-        binding:isScrollTop="isScrollTop"
-        binding:itemSource="mentionsTimeline"
-        binding:itemTemplate="@layout/status_layout"
-        binding:onItemClicked="onItemClicked" 
-        binding:visibility="NOT(isHomeMode)">
-
-    </net.miz_hi.warotter.core.CustomListView>
+        <ListView
+            android:id="@+id/listView_mentions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/relativeLayout2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/relativeLayout1"
+            android:fastScrollEnabled="true"
+            android:smoothScrollbar="true"
+            android:transcriptMode="disabled"
+            android:background="@color/White"/>
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -53,20 +36,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        binding:backgroundColor="barBackground" >
+        android:background="@color/Black" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/LightBlue"
+            android:textColor="@color/MetroBlue"
             android:textSize="13sp"
             android:textStyle="bold"
-            android:typeface="sans"
-            binding:text="title" />
+            android:typeface="sans" />
 
     </RelativeLayout>
 
@@ -75,37 +57,34 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        binding:backgroundColor="barBackground" >
+        android:background="@color/Black" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageView_tweet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="40dp"
             android:adjustViewBounds="false"
-            binding:source="postButtonRes"
-            binding:onClick="tweet" />
+            android:src="@drawable/icon_tweet_w" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView_timeline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            binding:source="timelineButtonRes"
-            binding:onClick="mentions" />
+            android:src="@drawable/icon_home_w" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="40dp"
-            binding:source="menuButtonRes"
-            binding:onClick="menu" />
+            android:src="@drawable/icon_menu_w" />
 
     </RelativeLayout>
 
