--- a/res/layout/status_layout.xml
+++ b/res/layout/status_layout.xml
@@ -1,74 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://www.gueei.com/android-binding/"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:padding="5dp"
-    binding:backgroundColor="backgroundColor">
+    android:padding="5dp">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageView_icon"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        binding:source="iconBitmap" />
+        android:layout_alignParentTop="true"/>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textView_screenName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/imageView1"
+        android:layout_toRightOf="@+id/imageView_icon"
         android:gravity="top"
-        android:textSize="10sp"
-        binding:text="screenName"
-        binding:textColor="nameColor" />
+        android:textSize="10sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/textView1"
+        android:layout_toRightOf="@+id/textView_screenName"
         android:gravity="top"
-        android:textSize="10sp"
-        binding:text="name"
-        binding:textColor="nameColor" />
+        android:textSize="10sp"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignLeft="@+id/textView_screenName"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/textView_screenName"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="3dp"
-        android:textSize="11sp"
-        binding:text="text" />
+        android:textSize="10sp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView_source"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView4"
-        android:layout_marginRight="3dp"
-        android:textSize="10sp"
-        binding:text="via" />
-
+        android:layout_below="@+id/textView_text"
+        android:layout_marginRight="2dp"
+        android:textSize="9sp" />
+    
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_createdAt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/textView_text"
+        android:layout_marginRight="2dp"
+        android:layout_toLeftOf="@+id/textView_source"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
-        binding:text="retweetedBy"
-        binding:visibility="isRetweet" />
+        android:textSize="9sp" />
+
+    <TextView
+        android:id="@+id/textView_retweetedBy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView_source"
+        android:layout_alignLeft="@+id/textView_text"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="9sp" />
 
 </RelativeLayout>
