--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="BrownYellow">#FFB100</color>
     <color name="DarkBlue">#231493</color>
     <color name="ThickGreen">#317C09</color>
+    <color name="LightGray">#f5f5f5</color>
     
 </resources>
