--- a/res/layout/dialog_menu_layout.xml
+++ b/res/layout/dialog_menu_layout.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://www.gueei.com/android-binding/"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Black"
-    android:orientation="vertical"
-    android:padding="5dp" >
+    android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <LinearLayout
+        android:id="@+id/linearLayout_dialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        binding:text="title"
-        android:textColor="@color/White"
-        android:textSize="20sp" />
+        android:layout_marginTop="5dp" 
+        android:padding="5dp"/>
 
     <FrameLayout 
         android:layout_width="fill_parent"
@@ -24,15 +20,11 @@
 
     </FrameLayout>
     
-    <ListView
+    <LinearLayout
+        android:id="@+id/linearLayout_dialogItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/Black"
-        android:choiceMode="none"
-        android:scrollingCache="false"
-        binding:clickedItem="clickedItem"
-        binding:itemSource="items"
-        binding:itemTemplate="@layout/menuitem_layout"
-        binding:onItemClicked="onItemClicked" />
+        android:orientation="vertical"
+        android:padding="1dp" />
 
 </LinearLayout>
