--- a/res/layout/menuitem_layout.xml
+++ b/res/layout/menuitem_layout.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://www.gueei.com/android-binding/"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:padding="5dp"  >
+	android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textView_menuItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/White"
         android:textSize="15sp"
-        binding:text="description" />
+        android:layout_marginTop="12dp"
+    	android:layout_marginBottom="12dp"
+    	android:paddingLeft="5dp"/>
+    
+    <FrameLayout 
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/Gray"/>
 
 </LinearLayout>
