設定画面実装、文字サイズ変更可能に。SlidingMenuの不具合解消 Close #9 Close #32 Close #35

--- a/res/layout/eventtoast_layout.xml
+++ b/res/layout/eventtoast_layout.xml
@@ -23,8 +23,7 @@
             android:paddingBottom="2dp"
             android:paddingLeft="5dp"
             android:paddingTop="2dp"
-            android:text="Text"
-            android:textSize="11sp" />
+            android:text="Text"/>
 
         <LinearLayout
             android:id="@+id/linearLayout_toastBody"
