--- a/res/layout/menuitem_layout.xml
+++ b/res/layout/menuitem_layout.xml
@@ -8,11 +8,11 @@
         android:id="@+id/textView_menuItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/White"
-        android:textSize="14sp"
+        android:layout_marginBottom="12dp"
         android:layout_marginTop="12dp"
-    	android:layout_marginBottom="12dp"
-    	android:paddingLeft="10dp"/>
+        android:paddingLeft="10dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/White" />
     
     <FrameLayout 
         android:layout_width="match_parent"
